parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> PRGM ID vars modules MAIN body END
Rule 2     vars -> type vars_prime vars_fourth_prime
Rule 3     vars_prime -> ID vars_second_prime
Rule 4     vars_second_prime -> LEFTB exp RIGHTB vars_third_prime
Rule 5     vars_second_prime -> EMPTY
Rule 6     vars_third_prime -> LEFTB exp RIGHTB
Rule 7     vars_third_prime -> EMPTY
Rule 8     vars_fourth_prime -> SEPARATOR vars_prime vars_fourth_prime
Rule 9     vars_fourth_prime -> EOS
Rule 10    type -> TYPEINT
Rule 11    type -> TYPEFLOAT
Rule 12    type -> TYPECHAR
Rule 13    body -> statement EOS body_prime
Rule 14    body_prime -> body
Rule 15    body_prime -> EMPTY
Rule 16    modules -> FUNCTION modules_prime ID LEFTP modules_second_prime
Rule 17    modules_prime -> type
Rule 18    modules_prime -> NOTYPE
Rule 19    modules_second_prime -> type ID modules_third_prime
Rule 20    modules_third_prime -> SEPARATOR modules_second_prime
Rule 21    modules_third_prime -> RIGHTP LEFTP vars body RIGHTP
Rule 22    statement -> assignment
Rule 23    statement -> print
Rule 24    statement -> functioncall
Rule 25    statement -> condition
Rule 26    statement -> specialfunction
Rule 27    increment -> ID increment_prime
Rule 28    increment_prime -> EQUALS increment_second_prime
Rule 29    increment_prime -> PLUS PLUS
Rule 30    increment_second_prime -> CSTI PLUS ID
Rule 31    increment_second_prime -> ID PLUS CSTI
Rule 32    assignment -> ID assignment_prime EQUALS expression
Rule 33    assignment_prime -> EMPTY
Rule 34    assignment_prime -> LEFTB exp RIGHTB assignment_second_prime
Rule 35    assignment_second_prime -> EMPTY
Rule 36    assignment_second_prime -> LEFTB exp RIGHTB
Rule 37    condition -> WHILE LEFTP compoundexp RIGHTP LEFTB body RIGHTB
Rule 38    condition -> FOR LEFTP assignment condition_prime
Rule 39    condition -> IF condition_second_prime
Rule 40    condition_prime -> SEPARATOR assignment condition_prime
Rule 41    condition_prime -> EOS compoundexp EOS increment RIGHTP LEFTB body RIGHTB
Rule 42    condition_second_prime -> LEFTP compoundexp RIGHTP condition_third_prime
Rule 43    condition_third_prime -> statement condition_fourth_prime
Rule 44    condition_third_prime -> LEFTB body RIGHTB condition_fourth_prime
Rule 45    condition_fourth_prime -> ELSEIF condition_second_prime
Rule 46    condition_fourth_prime -> ELSE condition_fifth_prime
Rule 47    condition_fourth_prime -> EMPTY
Rule 48    condition_fifth_prime -> statement
Rule 49    condition_fifth_prime -> LEFTB body RIGHTB
Rule 50    functioncall -> ID LEFTP exp functioncall_prime
Rule 51    functioncall_prime -> SEPARATOR exp functioncall_prime
Rule 52    functioncall_prime -> RIGHTP
Rule 53    expression -> exp expression_prime
Rule 54    expression_prime -> exp expression_prime
Rule 55    expression_prime -> GREATER
Rule 56    expression_prime -> LESS
Rule 57    expression_prime -> EQUAL
Rule 58    expression_prime -> NOTEQUAL
Rule 59    expression_prime -> GREATEREQUAL
Rule 60    expression_prime -> LESSEQUAL
Rule 61    expression_prime -> EMPTY
Rule 62    print -> PRINT LEFTP print_prime
Rule 63    print_prime -> STRING RIGHTP
Rule 64    print_prime -> expression RIGHTP
Rule 65    exp -> term exp_prime
Rule 66    exp_prime -> PLUS term exp_prime
Rule 67    exp_prime -> MINUS term exp_prime
Rule 68    exp_prime -> EMPTY
Rule 69    operand -> CSTI
Rule 70    operand -> CSTF
Rule 71    operand -> ID operand_prime
Rule 72    operand_prime -> EMPTY
Rule 73    operand_prime -> LEFTB exp RIGHTB operand_second_prime
Rule 74    operand_prime -> LEFTP exp operand_third_prime
Rule 75    operand_second_prime -> EMPTY
Rule 76    operand_second_prime -> LEFTB exp RIGHTB
Rule 77    operand_third_prime -> SEPARATOR exp operand_third_prime
Rule 78    operand_third_prime -> RIGHTP
Rule 79    term -> factor term_prime
Rule 80    term_prime -> MULTIPLY factor term_prime
Rule 81    term_prime -> DIVIDE factor term_prime
Rule 82    term_prime -> EMPTY
Rule 83    factor -> LEFTP expression RIGHTP
Rule 84    factor -> operand
Rule 85    factor -> PLUS operand
Rule 86    factor -> MINUS operand
Rule 87    specialfunction -> JEDO POINT specialfunction_prime
Rule 88    specialfunction_prime -> CIRCLE LEFTP exp RIGHTP
Rule 89    specialfunction_prime -> SQUARE LEFTP exp SEPARATOR exp RIGHTP
Rule 90    specialfunction_prime -> RECTANGLE LEFTP exp SEPARATOR exp RIGHTP
Rule 91    specialfunction_prime -> FORWARD LEFTP exp RIGHTP
Rule 92    specialfunction_prime -> BACK LEFTP exp RIGHTP
Rule 93    specialfunction_prime -> TURNRIGHT LEFTP exp RIGHTP
Rule 94    specialfunction_prime -> TURNLEFT LEFTP exp RIGHTP
Rule 95    specialfunction_prime -> COLOR LEFTP exp SEPARATOR exp SEPARATOR exp RIGHTP
Rule 96    specialfunction_prime -> ARCH LEFTP exp RIGHTP
Rule 97    specialfunction_prime -> LINE LEFTP exp SEPARATOR exp RIGHTP
Rule 98    specialfunction_prime -> THICKNESS LEFTP exp RIGHTP
Rule 99    compoundexp -> expression compoundexp_prime
Rule 100   compoundexp_prime -> AND compoundexp
Rule 101   compoundexp_prime -> OR compoundexp
Rule 102   compoundexp_prime -> EMPTY

Terminals, with rules where they appear

AND                  : 100
ARCH                 : 96
BACK                 : 92
CIRCLE               : 88
COLOR                : 95
CSTF                 : 70
CSTI                 : 30 31 69
DIVIDE               : 81
ELSE                 : 46
ELSEIF               : 45
EMPTY                : 5 7 15 33 35 47 61 68 72 75 82 102
END                  : 1
EOS                  : 9 13 41 41
EQUAL                : 57
EQUALS               : 28 32
FOR                  : 38
FORWARD              : 91
FUNCTION             : 16
GREATER              : 55
GREATEREQUAL         : 59
ID                   : 1 3 16 19 27 30 31 32 50 71
IF                   : 39
JEDO                 : 87
LEFTB                : 4 6 34 36 37 41 44 49 73 76
LEFTP                : 16 21 37 38 42 50 62 74 83 88 89 90 91 92 93 94 95 96 97 98
LESS                 : 56
LESSEQUAL            : 60
LINE                 : 97
MAIN                 : 1
MINUS                : 67 86
MULTIPLY             : 80
NOTEQUAL             : 58
NOTYPE               : 18
OR                   : 101
PLUS                 : 29 29 30 31 66 85
POINT                : 87
PRGM                 : 1
PRINT                : 62
RECTANGLE            : 90
RIGHTB               : 4 6 34 36 37 41 44 49 73 76
RIGHTP               : 21 21 37 41 42 52 63 64 78 83 88 89 90 91 92 93 94 95 96 97 98
SEPARATOR            : 8 20 40 51 77 89 90 95 95 97
SQUARE               : 89
STRING               : 63
THICKNESS            : 98
TURNLEFT             : 94
TURNRIGHT            : 93
TYPECHAR             : 12
TYPEFLOAT            : 11
TYPEINT              : 10
WHILE                : 37
error                : 

Nonterminals, with rules where they appear

assignment           : 22 38 40
assignment_prime     : 32
assignment_second_prime : 34
body                 : 1 14 21 37 41 44 49
body_prime           : 13
compoundexp          : 37 41 42 100 101
compoundexp_prime    : 99
condition            : 25
condition_fifth_prime : 46
condition_fourth_prime : 43 44
condition_prime      : 38 40
condition_second_prime : 39 45
condition_third_prime : 42
exp                  : 4 6 34 36 50 51 53 54 73 74 76 77 88 89 89 90 90 91 92 93 94 95 95 95 96 97 97 98
exp_prime            : 65 66 67
expression           : 32 64 83 99
expression_prime     : 53 54
factor               : 79 80 81
functioncall         : 24
functioncall_prime   : 50 51
increment            : 41
increment_prime      : 27
increment_second_prime : 28
modules              : 1
modules_prime        : 16
modules_second_prime : 16 20
modules_third_prime  : 19
operand              : 84 85 86
operand_prime        : 71
operand_second_prime : 73
operand_third_prime  : 74 77
print                : 23
print_prime          : 62
program              : 0
specialfunction      : 26
specialfunction_prime : 87
statement            : 13 43 48
term                 : 65 66 67
term_prime           : 79 80 81
type                 : 2 17 19
vars                 : 1 21
vars_fourth_prime    : 2 8
vars_prime           : 2 8
vars_second_prime    : 3
vars_third_prime     : 4

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PRGM ID vars modules MAIN body END

    PRGM            shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PRGM . ID vars modules MAIN body END

    ID              shift and go to state 3


state 3

    (1) program -> PRGM ID . vars modules MAIN body END
    (2) vars -> . type vars_prime vars_fourth_prime
    (10) type -> . TYPEINT
    (11) type -> . TYPEFLOAT
    (12) type -> . TYPECHAR

    TYPEINT         shift and go to state 6
    TYPEFLOAT       shift and go to state 7
    TYPECHAR        shift and go to state 8

    vars                           shift and go to state 4
    type                           shift and go to state 5

state 4

    (1) program -> PRGM ID vars . modules MAIN body END
    (16) modules -> . FUNCTION modules_prime ID LEFTP modules_second_prime

    FUNCTION        shift and go to state 10

    modules                        shift and go to state 9

state 5

    (2) vars -> type . vars_prime vars_fourth_prime
    (3) vars_prime -> . ID vars_second_prime

    ID              shift and go to state 12

    vars_prime                     shift and go to state 11

state 6

    (10) type -> TYPEINT .

    ID              reduce using rule 10 (type -> TYPEINT .)


state 7

    (11) type -> TYPEFLOAT .

    ID              reduce using rule 11 (type -> TYPEFLOAT .)


state 8

    (12) type -> TYPECHAR .

    ID              reduce using rule 12 (type -> TYPECHAR .)


state 9

    (1) program -> PRGM ID vars modules . MAIN body END

    MAIN            shift and go to state 13


state 10

    (16) modules -> FUNCTION . modules_prime ID LEFTP modules_second_prime
    (17) modules_prime -> . type
    (18) modules_prime -> . NOTYPE
    (10) type -> . TYPEINT
    (11) type -> . TYPEFLOAT
    (12) type -> . TYPECHAR

    NOTYPE          shift and go to state 16
    TYPEINT         shift and go to state 6
    TYPEFLOAT       shift and go to state 7
    TYPECHAR        shift and go to state 8

    modules_prime                  shift and go to state 14
    type                           shift and go to state 15

state 11

    (2) vars -> type vars_prime . vars_fourth_prime
    (8) vars_fourth_prime -> . SEPARATOR vars_prime vars_fourth_prime
    (9) vars_fourth_prime -> . EOS

    SEPARATOR       shift and go to state 18
    EOS             shift and go to state 19

    vars_fourth_prime              shift and go to state 17

state 12

    (3) vars_prime -> ID . vars_second_prime
    (4) vars_second_prime -> . LEFTB exp RIGHTB vars_third_prime
    (5) vars_second_prime -> . EMPTY

    LEFTB           shift and go to state 21
    EMPTY           shift and go to state 22

    vars_second_prime              shift and go to state 20

state 13

    (1) program -> PRGM ID vars modules MAIN . body END
    (13) body -> . statement EOS body_prime
    (22) statement -> . assignment
    (23) statement -> . print
    (24) statement -> . functioncall
    (25) statement -> . condition
    (26) statement -> . specialfunction
    (32) assignment -> . ID assignment_prime EQUALS expression
    (62) print -> . PRINT LEFTP print_prime
    (50) functioncall -> . ID LEFTP exp functioncall_prime
    (37) condition -> . WHILE LEFTP compoundexp RIGHTP LEFTB body RIGHTB
    (38) condition -> . FOR LEFTP assignment condition_prime
    (39) condition -> . IF condition_second_prime
    (87) specialfunction -> . JEDO POINT specialfunction_prime

    ID              shift and go to state 23
    PRINT           shift and go to state 31
    WHILE           shift and go to state 32
    FOR             shift and go to state 33
    IF              shift and go to state 34
    JEDO            shift and go to state 35

    body                           shift and go to state 24
    statement                      shift and go to state 25
    assignment                     shift and go to state 26
    print                          shift and go to state 27
    functioncall                   shift and go to state 28
    condition                      shift and go to state 29
    specialfunction                shift and go to state 30

state 14

    (16) modules -> FUNCTION modules_prime . ID LEFTP modules_second_prime

    ID              shift and go to state 36


state 15

    (17) modules_prime -> type .

    ID              reduce using rule 17 (modules_prime -> type .)


state 16

    (18) modules_prime -> NOTYPE .

    ID              reduce using rule 18 (modules_prime -> NOTYPE .)


state 17

    (2) vars -> type vars_prime vars_fourth_prime .

    FUNCTION        reduce using rule 2 (vars -> type vars_prime vars_fourth_prime .)
    ID              reduce using rule 2 (vars -> type vars_prime vars_fourth_prime .)
    PRINT           reduce using rule 2 (vars -> type vars_prime vars_fourth_prime .)
    WHILE           reduce using rule 2 (vars -> type vars_prime vars_fourth_prime .)
    FOR             reduce using rule 2 (vars -> type vars_prime vars_fourth_prime .)
    IF              reduce using rule 2 (vars -> type vars_prime vars_fourth_prime .)
    JEDO            reduce using rule 2 (vars -> type vars_prime vars_fourth_prime .)


state 18

    (8) vars_fourth_prime -> SEPARATOR . vars_prime vars_fourth_prime
    (3) vars_prime -> . ID vars_second_prime

    ID              shift and go to state 12

    vars_prime                     shift and go to state 37

state 19

    (9) vars_fourth_prime -> EOS .

    FUNCTION        reduce using rule 9 (vars_fourth_prime -> EOS .)
    ID              reduce using rule 9 (vars_fourth_prime -> EOS .)
    PRINT           reduce using rule 9 (vars_fourth_prime -> EOS .)
    WHILE           reduce using rule 9 (vars_fourth_prime -> EOS .)
    FOR             reduce using rule 9 (vars_fourth_prime -> EOS .)
    IF              reduce using rule 9 (vars_fourth_prime -> EOS .)
    JEDO            reduce using rule 9 (vars_fourth_prime -> EOS .)


state 20

    (3) vars_prime -> ID vars_second_prime .

    SEPARATOR       reduce using rule 3 (vars_prime -> ID vars_second_prime .)
    EOS             reduce using rule 3 (vars_prime -> ID vars_second_prime .)


state 21

    (4) vars_second_prime -> LEFTB . exp RIGHTB vars_third_prime
    (65) exp -> . term exp_prime
    (79) term -> . factor term_prime
    (83) factor -> . LEFTP expression RIGHTP
    (84) factor -> . operand
    (85) factor -> . PLUS operand
    (86) factor -> . MINUS operand
    (69) operand -> . CSTI
    (70) operand -> . CSTF
    (71) operand -> . ID operand_prime

    LEFTP           shift and go to state 41
    PLUS            shift and go to state 43
    MINUS           shift and go to state 44
    CSTI            shift and go to state 45
    CSTF            shift and go to state 46
    ID              shift and go to state 47

    exp                            shift and go to state 38
    term                           shift and go to state 39
    factor                         shift and go to state 40
    operand                        shift and go to state 42

state 22

    (5) vars_second_prime -> EMPTY .

    SEPARATOR       reduce using rule 5 (vars_second_prime -> EMPTY .)
    EOS             reduce using rule 5 (vars_second_prime -> EMPTY .)


state 23

    (32) assignment -> ID . assignment_prime EQUALS expression
    (50) functioncall -> ID . LEFTP exp functioncall_prime
    (33) assignment_prime -> . EMPTY
    (34) assignment_prime -> . LEFTB exp RIGHTB assignment_second_prime

    LEFTP           shift and go to state 49
    EMPTY           shift and go to state 50
    LEFTB           shift and go to state 51

    assignment_prime               shift and go to state 48

state 24

    (1) program -> PRGM ID vars modules MAIN body . END

    END             shift and go to state 52


state 25

    (13) body -> statement . EOS body_prime

    EOS             shift and go to state 53


state 26

    (22) statement -> assignment .

    EOS             reduce using rule 22 (statement -> assignment .)
    ELSEIF          reduce using rule 22 (statement -> assignment .)
    ELSE            reduce using rule 22 (statement -> assignment .)
    EMPTY           reduce using rule 22 (statement -> assignment .)


state 27

    (23) statement -> print .

    EOS             reduce using rule 23 (statement -> print .)
    ELSEIF          reduce using rule 23 (statement -> print .)
    ELSE            reduce using rule 23 (statement -> print .)
    EMPTY           reduce using rule 23 (statement -> print .)


state 28

    (24) statement -> functioncall .

    EOS             reduce using rule 24 (statement -> functioncall .)
    ELSEIF          reduce using rule 24 (statement -> functioncall .)
    ELSE            reduce using rule 24 (statement -> functioncall .)
    EMPTY           reduce using rule 24 (statement -> functioncall .)


state 29

    (25) statement -> condition .

    EOS             reduce using rule 25 (statement -> condition .)
    ELSEIF          reduce using rule 25 (statement -> condition .)
    ELSE            reduce using rule 25 (statement -> condition .)
    EMPTY           reduce using rule 25 (statement -> condition .)


state 30

    (26) statement -> specialfunction .

    EOS             reduce using rule 26 (statement -> specialfunction .)
    ELSEIF          reduce using rule 26 (statement -> specialfunction .)
    ELSE            reduce using rule 26 (statement -> specialfunction .)
    EMPTY           reduce using rule 26 (statement -> specialfunction .)


state 31

    (62) print -> PRINT . LEFTP print_prime

    LEFTP           shift and go to state 54


state 32

    (37) condition -> WHILE . LEFTP compoundexp RIGHTP LEFTB body RIGHTB

    LEFTP           shift and go to state 55


state 33

    (38) condition -> FOR . LEFTP assignment condition_prime

    LEFTP           shift and go to state 56


state 34

    (39) condition -> IF . condition_second_prime
    (42) condition_second_prime -> . LEFTP compoundexp RIGHTP condition_third_prime

    LEFTP           shift and go to state 58

    condition_second_prime         shift and go to state 57

state 35

    (87) specialfunction -> JEDO . POINT specialfunction_prime

    POINT           shift and go to state 59


state 36

    (16) modules -> FUNCTION modules_prime ID . LEFTP modules_second_prime

    LEFTP           shift and go to state 60


state 37

    (8) vars_fourth_prime -> SEPARATOR vars_prime . vars_fourth_prime
    (8) vars_fourth_prime -> . SEPARATOR vars_prime vars_fourth_prime
    (9) vars_fourth_prime -> . EOS

    SEPARATOR       shift and go to state 18
    EOS             shift and go to state 19

    vars_fourth_prime              shift and go to state 61

state 38

    (4) vars_second_prime -> LEFTB exp . RIGHTB vars_third_prime

    RIGHTB          shift and go to state 62


state 39

    (65) exp -> term . exp_prime
    (66) exp_prime -> . PLUS term exp_prime
    (67) exp_prime -> . MINUS term exp_prime
    (68) exp_prime -> . EMPTY

    PLUS            shift and go to state 64
    MINUS           shift and go to state 65
    EMPTY           shift and go to state 66

    exp_prime                      shift and go to state 63

state 40

    (79) term -> factor . term_prime
    (80) term_prime -> . MULTIPLY factor term_prime
    (81) term_prime -> . DIVIDE factor term_prime
    (82) term_prime -> . EMPTY

    MULTIPLY        shift and go to state 68
    DIVIDE          shift and go to state 69
    EMPTY           shift and go to state 70

    term_prime                     shift and go to state 67

state 41

    (83) factor -> LEFTP . expression RIGHTP
    (53) expression -> . exp expression_prime
    (65) exp -> . term exp_prime
    (79) term -> . factor term_prime
    (83) factor -> . LEFTP expression RIGHTP
    (84) factor -> . operand
    (85) factor -> . PLUS operand
    (86) factor -> . MINUS operand
    (69) operand -> . CSTI
    (70) operand -> . CSTF
    (71) operand -> . ID operand_prime

    LEFTP           shift and go to state 41
    PLUS            shift and go to state 43
    MINUS           shift and go to state 44
    CSTI            shift and go to state 45
    CSTF            shift and go to state 46
    ID              shift and go to state 47

    expression                     shift and go to state 71
    exp                            shift and go to state 72
    term                           shift and go to state 39
    factor                         shift and go to state 40
    operand                        shift and go to state 42

state 42

    (84) factor -> operand .

    MULTIPLY        reduce using rule 84 (factor -> operand .)
    DIVIDE          reduce using rule 84 (factor -> operand .)
    EMPTY           reduce using rule 84 (factor -> operand .)


state 43

    (85) factor -> PLUS . operand
    (69) operand -> . CSTI
    (70) operand -> . CSTF
    (71) operand -> . ID operand_prime

    CSTI            shift and go to state 45
    CSTF            shift and go to state 46
    ID              shift and go to state 47

    operand                        shift and go to state 73

state 44

    (86) factor -> MINUS . operand
    (69) operand -> . CSTI
    (70) operand -> . CSTF
    (71) operand -> . ID operand_prime

    CSTI            shift and go to state 45
    CSTF            shift and go to state 46
    ID              shift and go to state 47

    operand                        shift and go to state 74

state 45

    (69) operand -> CSTI .

    MULTIPLY        reduce using rule 69 (operand -> CSTI .)
    DIVIDE          reduce using rule 69 (operand -> CSTI .)
    EMPTY           reduce using rule 69 (operand -> CSTI .)


state 46

    (70) operand -> CSTF .

    MULTIPLY        reduce using rule 70 (operand -> CSTF .)
    DIVIDE          reduce using rule 70 (operand -> CSTF .)
    EMPTY           reduce using rule 70 (operand -> CSTF .)


state 47

    (71) operand -> ID . operand_prime
    (72) operand_prime -> . EMPTY
    (73) operand_prime -> . LEFTB exp RIGHTB operand_second_prime
    (74) operand_prime -> . LEFTP exp operand_third_prime

    EMPTY           shift and go to state 76
    LEFTB           shift and go to state 77
    LEFTP           shift and go to state 78

    operand_prime                  shift and go to state 75

state 48

    (32) assignment -> ID assignment_prime . EQUALS expression

    EQUALS          shift and go to state 79


state 49

    (50) functioncall -> ID LEFTP . exp functioncall_prime
    (65) exp -> . term exp_prime
    (79) term -> . factor term_prime
    (83) factor -> . LEFTP expression RIGHTP
    (84) factor -> . operand
    (85) factor -> . PLUS operand
    (86) factor -> . MINUS operand
    (69) operand -> . CSTI
    (70) operand -> . CSTF
    (71) operand -> . ID operand_prime

    LEFTP           shift and go to state 41
    PLUS            shift and go to state 43
    MINUS           shift and go to state 44
    CSTI            shift and go to state 45
    CSTF            shift and go to state 46
    ID              shift and go to state 47

    exp                            shift and go to state 80
    term                           shift and go to state 39
    factor                         shift and go to state 40
    operand                        shift and go to state 42

state 50

    (33) assignment_prime -> EMPTY .

    EQUALS          reduce using rule 33 (assignment_prime -> EMPTY .)


state 51

    (34) assignment_prime -> LEFTB . exp RIGHTB assignment_second_prime
    (65) exp -> . term exp_prime
    (79) term -> . factor term_prime
    (83) factor -> . LEFTP expression RIGHTP
    (84) factor -> . operand
    (85) factor -> . PLUS operand
    (86) factor -> . MINUS operand
    (69) operand -> . CSTI
    (70) operand -> . CSTF
    (71) operand -> . ID operand_prime

    LEFTP           shift and go to state 41
    PLUS            shift and go to state 43
    MINUS           shift and go to state 44
    CSTI            shift and go to state 45
    CSTF            shift and go to state 46
    ID              shift and go to state 47

    exp                            shift and go to state 81
    term                           shift and go to state 39
    factor                         shift and go to state 40
    operand                        shift and go to state 42

state 52

    (1) program -> PRGM ID vars modules MAIN body END .

    $end            reduce using rule 1 (program -> PRGM ID vars modules MAIN body END .)


state 53

    (13) body -> statement EOS . body_prime
    (14) body_prime -> . body
    (15) body_prime -> . EMPTY
    (13) body -> . statement EOS body_prime
    (22) statement -> . assignment
    (23) statement -> . print
    (24) statement -> . functioncall
    (25) statement -> . condition
    (26) statement -> . specialfunction
    (32) assignment -> . ID assignment_prime EQUALS expression
    (62) print -> . PRINT LEFTP print_prime
    (50) functioncall -> . ID LEFTP exp functioncall_prime
    (37) condition -> . WHILE LEFTP compoundexp RIGHTP LEFTB body RIGHTB
    (38) condition -> . FOR LEFTP assignment condition_prime
    (39) condition -> . IF condition_second_prime
    (87) specialfunction -> . JEDO POINT specialfunction_prime

    EMPTY           shift and go to state 84
    ID              shift and go to state 23
    PRINT           shift and go to state 31
    WHILE           shift and go to state 32
    FOR             shift and go to state 33
    IF              shift and go to state 34
    JEDO            shift and go to state 35
